# brok

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  Dockerfile  TODO  TODO2  TOOLS.md  main.py  pyproject.toml  test_reconnection.py
.cursor/rules/: claude-persona.mdc  config-and-ci.mdc  docker-standards.mdc  python-code-standards.mdc  python-project-structure.mdc  test-standards.mdc
.github/workflows/: ci.yml  lint.yml  release.yaml
brok/: __init__.py  bot.py  chat.py  config.py  exceptions.py  main.py  prompts.py  token_counter.py
brok/llm/: __init__.py  base.py  llamacpp.py  ollama.py
brok/tools/: __init__.py  base.py  cache.py  calculator.py  datetime.py  parser.py  registry.py  weather.py
enhancements/: KEP-001-chat-history-context.md  KEP-002-xml-prompt-formatting.md  KEP-003-rag-knowledge-assistant.md  WSGGPY_RECONNECTION.md
src/: inference.rs  main.rs  tools.rs
tests/: __init__.py  test_bot.py  test_chat.py  test_config.py  test_exceptions.py  test_llm_base.py  test_llm_llamacpp.py  test_llm_ollama.py  test_main.py  test_prompts.py  test_token_counter.py  test_tools.py  test_tools_cache.py  test_tools_integration.py
