[package]
name = "brok"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4.23", features = ["clock"] }
clap = { version = "4.1.8", features = ["derive"] }
ical = "0.8.0"
wsgg = { git = "https://github.com/Oreganon/wsgg.git", branch = "main" }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full", "signal"] }
